@@ -39,20 +39,20 @@ See wiki for details on parameters.
 			<auto-bank-limit-calc type="bool">1</auto-bank-limit-calc> <!-- Disable to add a custom auto bank limit schedule -->
 			<auto-system-reset type="bool">1</auto-system-reset> <!-- Automatically reset the system after landing -->
 			<autoland-without-ap type="bool">1</autoland-without-ap> <!-- Engage autoland guidance even if the AP is off -->
-			<autothrottle-max type="double">0.95</autothrottle-max> <!-- Thrust Max Limit Normalized -->
-			<autothrottle-min type="double">0.02</autothrottle-min> <!-- Thrust Low Limit Normalized -->
-			<bank-max-deg type="double">25</bank-max-deg> <!-- Maximum Bank Limit -->
+			<autothrottle-max type="double">0.95</autothrottle-max> <!-- Thrust Max Limit normalized -->
+			<autothrottle-min type="double">0.02</autothrottle-min> <!-- Thrust Low Limit normalized -->
+			<bank-max-deg type="double">25</bank-max-deg> <!-- Maximum bank limit -->
 			<custom-fma type="bool">0</custom-fma> <!-- Call functions when modes change for a custom FMA to be implemented --> 
 			<disable-final type="bool">0</disable-final> <!-- Disable the Final Controllers for custom FCS integration -->
 			<fd-starts-on type="bool">1</fd-starts-on> <!-- Enable/Disable Flight Director being on by default -->
-			<fd-takeoff-offset type="double">0</fd-takeoff-offset> <!-- Adjust the Flight Director Pitch Bar on ground -->
+			<fd-takeoff-deg type="double">7.5</fd-takeoff-deg> <!-- Adjust Flight Director pitch bar in T/O CLB on ground -->
 			<ground-mode-select type="bool">0</ground-mode-select> <!-- Allow modes to be selected when on ground -->
 			<hdg-hld-separate type="bool">0</hdg-hld-separate> <!-- Separates HDG HLD mode from HDG SEL mode -->
 			<land-enable type="bool">1</land-enable> <!-- Enable/Disable Autoland -->
-			<land-flap type="double">0.7</land-flap> <!-- Minimum Flap used for Landing -->
+			<land-flap type="double">0.7</land-flap> <!-- Minimum Flap used for landing -->
 			<lnav-ft type="double">50</lnav-ft> <!-- AGL when LNAV becomes active if armed -->
-			<retard-enable type="bool">1</retard-enable> <!-- AGL to Thrust Retard -->
-			<retard-ft type="double">50</retard-ft> <!-- Enable Thrust Retard -->
+			<retard-enable type="bool">1</retard-enable> <!-- AGL to enter Thrust Retard mode -->
+			<retard-ft type="double">50</retard-ft> <!-- Enable Thrust Retard mode -->
 			<takeoff-hdg-cap type="double">5</takeoff-hdg-cap> <!-- Maximum bank to capture current hdg in T/O mode -->
 			<toga-spd type="double">160</toga-spd> <!-- V2 + 10kts -->
 			<use-controls-engines type="bool">1</use-controls-engines> <!-- Use /controls/engines properties -->
