@@ -209,17 +209,12 @@
 		<type>exponential</type>
 		<input>
 			<condition>
-				<equals>
-					<property>/gear/gear[0]/wow</property>
+				<less-than>
+					<property>/velocities/airspeed-kt</property>
 					<value>1</value>
-				</equals>
+				</less-than>
 			</condition>
-			<expression> <!-- On ground, we want upwards guidance only -->
-				<div>
-					<property>/it-autoflight/config/cmd/flch-accel</property>
-					<value>0.375</value>
-				</div>
-			</expression>
+			<value>0</value>
 		</input>
 		<input>/it-autoflight/internal/kts-rate-raw</input>
 		<output>/it-autoflight/internal/kts-rate</output>
@@ -263,17 +258,12 @@
 		<type>exponential</type>
 		<input>
 			<condition>
-				<equals>
-					<property>/gear/gear[0]/wow</property>
+				<less-than>
+					<property>/velocities/airspeed-kt</property>
 					<value>1</value>
-				</equals>
+				</less-than>
 			</condition>
-			<expression> <!-- On ground, we want upwards guidance only -->
-				<div>
-					<property>/it-autoflight/config/cmd/flch-accel</property>
-					<value>0.375</value>
-				</div>
-			</expression>
+			<value>0</value>
 		</input>
 		<input>/it-autoflight/internal/mach-rate-gain</input>
 		<output>/it-autoflight/internal/mach-rate</output>
@@ -2410,15 +2400,9 @@
 	</filter>
 	
 	<filter>
-		<name>FD Pitch Takeoff</name>
+		<name>FD Pitch Takeoff Schedule</name>
 		<type>noise-spike</type>
 		<input>
-			<condition>
-				<equals>
-					<property>/it-autoflight/mode/vert</property>
-					<value>T/O CLB</value>
-				</equals>
-			</condition>
 			<expression>
 				<product>
 					<table>
@@ -2429,20 +2413,49 @@
 					<table>
 						<property>/position/gear-agl-ft</property>
 						<entry><ind> 5</ind><dep>1</dep></entry>
-						<entry><ind>30</ind><dep>0</dep></entry>
+						<entry><ind>25</ind><dep>0</dep></entry>
 					</table>
-					<property>/it-autoflight/settings/fd-takeoff-offset</property>
 				</product>
 			</expression>
 		</input>
-		<input>0</input>
-		<output>/it-autoflight/fd/pitch-bar-takeoff</output>
-		<max-rate-of-change>7.5</max-rate-of-change>
+		<output>/it-autoflight/fd/pitch-bar-mixer</output>
+		<max-rate-of-change>2</max-rate-of-change>
 	</filter>
 	
 	<filter>
-		<name>FD Pitch</name>
-		<type>noise-spike</type>
+		<name>FD Pitch Takeoff</name>
+		<type>gain</type>
+		<gain>1.0</gain>
+		<input>
+			<condition>
+				<and>
+					<equals>
+						<property>/gear/gear[0]/wow</property>
+						<value>0</value>
+					</equals>
+					<greater-than>
+						<property>/it-autoflight/fd/pitch-bar-mixer</property>
+						<value>0</value>
+					</greater-than>
+				</and>
+			</condition>
+			<property>/it-autoflight/fd/pitch-bar-takeoff</property>
+		</input>
+		<input>
+			<expression>
+				<difference>
+					<property>/it-autoflight/settings/fd-takeoff-deg</property>
+					<property>/orientation/pitch-deg</property>
+				</difference>
+			</expression>
+		</input>
+		<output>/it-autoflight/fd/pitch-bar-takeoff</output>
+	</filter>
+	
+	<filter>
+		<name>FD Pitch Command</name>
+		<type>gain</type>
+		<gain>1.0</gain>
 		<input>
 			<condition>
 				<equals>
@@ -2459,28 +2472,57 @@
 		</input>
 		<input>
 			<expression>
+				<rad2deg>
+					<asin>
+						<div>
+							<difference>
+								<property>/it-autoflight/internal/target-common-fpm</property>
+								<property>/it-autoflight/internal/vert-speed-fpm</property>
+							</difference>
+							<product>
+								<max>
+									<property>/instrumentation/airspeed-indicator[0]/true-speed-kt</property>
+									<value>140</value>
+								</max>
+								<value>151.90288713910761</value> <!-- FPM to Knot * 1.5 -->
+							</product>
+						</div>
+					</asin>
+				</rad2deg>
+			</expression>
+		</input>
+		<output>/it-autoflight/fd/pitch-bar-cmd</output>
+	</filter>
+	
+	<filter>
+		<name>FD Pitch Final</name>
+		<type>noise-spike</type>
+		<input>
+			<condition>
+				<equals>
+					<property>/it-autoflight/mode/vert</property>
+					<value>T/O CLB</value>
+				</equals>
+			</condition>
+			<expression>
 				<sum>
-					<rad2deg>
-						<asin>
-							<div>
-								<difference>
-									<property>/it-autoflight/internal/target-common-fpm</property>
-									<property>/it-autoflight/internal/vert-speed-fpm</property>
-								</difference>
-								<product>
-									<max>
-										<property>/instrumentation/airspeed-indicator[0]/true-speed-kt</property>
-										<value>140</value>
-									</max>
-									<value>151.90288713910761</value> <!-- FPM to Knot * 1.5 -->
-								</product>
-							</div>
-						</asin>
-					</rad2deg>
-					<property>/it-autoflight/fd/pitch-bar-takeoff</property>
+					<product>
+						<property>/it-autoflight/fd/pitch-bar-cmd</property>
+						<abs>
+							<sum>
+								<property>/it-autoflight/fd/pitch-bar-mixer</property>
+								<value>-1</value>
+							</sum>
+						</abs>
+					</product>
+					<product>
+						<property>/it-autoflight/fd/pitch-bar-takeoff</property>
+						<property>/it-autoflight/fd/pitch-bar-mixer</property>
+					</product>
 				</sum>
 			</expression>
 		</input>
+		<input>/it-autoflight/fd/pitch-bar-cmd</input>
 		<output>/it-autoflight/fd/pitch-bar</output>
 		<min>-15</min>
 		<max>15</max>
