@@ -6,6 +6,8 @@ I will note if new ITAF tuning or config is required. Simply check the "ITAF CON
 V4.0.9:
 [Control Loop]
 * Added: Basic pitch hold mode
+* Added: Improved pitch flight director computation
+* Added: Better adjustment for takeoff flight director pitch bar (New config required)
 
 [Logic]
 * Added: Ability to allow modes to be selected on the ground (New config required)
